--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          <div class="center">
             <a href="/">HOME</a>
           <a href="/pages/about.html">ABOUT</a>
-          <a href="/pages/skils.html">SKILS</a>
+          <a href="/pages/skils.html">SKILLS</a>
           <a href="/pages/contact.html">CONTACT</a>
          </div>
          <div class="right">
