--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
          </div>
          <div class="center">
             <a href="/">HOME</a>
-            <a href="pages/about.html">ABOUT</a>
-            <a href="pages/skils.html">SKILS</a>
-            <a href="pages/contact.html">CONTACT</a>
+            <a href="My-Portfolio/pages/about.html">ABOUT</a>
+            <a href="My-Portfolio/pages/skils.html">SKILS</a>
+            <a href="My-Portfolio/pages/contact.html">CONTACT</a>
+
             
          </div>
          <div class="right">
