--- a/pages/skils.html
+++ b/pages/skils.html
@@ -36,9 +36,9 @@
        </div>
          <div class="center">
           <a href="">HOME</a>
-        <a href="pages/about.html">ABOUT</a>
-        <a href="pages/skils.html">SKILS</a>
-        <a href="pages/contact.html">CONTACT</a>
+        <a href="../pages/about.html">ABOUT</a>
+        <a href="../pages/skils.html">SKILS</a>
+        <a href="../pages/contact.html">CONTACT</a>
        </div>
          <div class="right">
             <span>
