--- a/pages/skils.html
+++ b/pages/skils.html
@@ -35,7 +35,7 @@
            
        </div>
          <div class="center">
-          <a href="">HOME</a>
+          <a href="../">HOME</a>
         <a href="../pages/about.html">ABOUT</a>
         <a href="../pages/skils.html">SKILS</a>
         <a href="../pages/contact.html">CONTACT</a>
