--- a/pages/skils.html
+++ b/pages/skils.html
@@ -54,7 +54,7 @@
 
 
    <header class="header target">
-      <img src="../public/img/background/register.jpg" alt="background">
+      <img src="public/img/background/register.jpg" alt="background">
       <h1>Skils</h1>
       <h3>My Journey in Progress</h3>
    </header>
