--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>  
 
 <header class="header target">
-   <img src="/public/img/Background/abc.jpg" alt="Header görseli">
+   <img src="/..public/img/Background/abc.jpg" alt="Header görseli">
    <h1>My Blog</h1>
    <h3>It's a Dream</h3>
  </header>
