--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>  
 
 <header class="header target">
-   <img src="/..public/img/Background/abc.jpg" alt="Header görseli">
+   <img src="../public/img/Background/abc.jpg" alt="Header görseli">
    <h1>My Blog</h1>
    <h3>It's a Dream</h3>
  </header>
@@ -63,7 +63,7 @@
       <div class="posts ">
          <div class="post target">
             <h1>Hakkimda</h1>
-            <img src="/public/img/Background/content-1.jpg " 
+            <img src="../public/img/Background/content-1.jpg " 
             alt="content">
             <p>     
                Merhaba, ben Emir Eren Davet. Elektrik-Elektronik Mühendisliği 3. sınıf öğrencisiyim ve eğitimime Rize'de devam ediyorum. Yaz aylarını aktif şekilde değerlendirerek kendime yeni tecrübeler katmaya özen gösteriyorum. Daha önce gemi elektriği alanında staj yaparak saha tecrübesi edindim. Ardından, yazılım dünyasına adım atarak bu alanda da yeni bilgiler öğrenmeye ve kendimi geliştirmeye başladım. Her yeni deneyimi, hem teknik hem kişisel gelişimim için bir fırsat olarak görüyorum.            </p>
