--- a/pages/about.html
+++ b/pages/about.html
@@ -55,7 +55,7 @@
 
 
    <header class="header target">
-      <img src="/public/img/Background/about.jpg" alt="background">
+      <img src="./pages/img1/Background/about.jpg" alt="background">
       <h1>Who I Am.</h1>
       <h3>Innovation Hunter</h3>
    </header>
@@ -65,7 +65,7 @@
          <div class="posts ">
             <div class="post target">
                <h1>Hakkimda</h1>
-               <img src="/pages/img1/Background/content-1.jpg "  
+               <img src="./pages/img1/Background/content-1.jpg "  
                alt="content">
                <p>     
                   Merhaba, ben Emir Eren Davet. Elektrik-Elektronik Mühendisliği 3. sınıf öğrencisiyim ve eğitimime Rize'de devam ediyorum. Yaz aylarını aktif şekilde değerlendirerek kendime yeni tecrübeler katmaya özen gösteriyorum. Daha önce gemi elektriği alanında staj yaparak saha tecrübesi edindim. Ardından, yazılım dünyasına adım atarak bu alanda da yeni bilgiler öğrenmeye ve kendimi geliştirmeye başladım. Her yeni deneyimi, hem teknik hem kişisel gelişimim için bir fırsat olarak görüyorum.            </p>
@@ -123,7 +123,7 @@
                Elektrik-Elektronik Mühendisliği alanında edindiğim teorik bilgileri, çeşitli saha tecrübeleriyle pekiştirdim. Özellikle gemi elektriği alanında sistem kurulumları ve arıza takibi konularında deneyim sahibiyim. Bunun yanı sıra otomasyon sistemleri ve pano imalatı üzerine çalıştım; bu süreçlerde kablolama, ekipman yerleşimi ve devreye alma gibi görevlerde aktif rol aldım. Bu deneyimler, hem teknik hem de pratik becerilerimi geliştirmemi sağladı.            </p>
          </div>
          <div class="photo">
-            <img src="../public/img/team/eem.png" alt="">
+            <img src="public/img/team/eem.png" alt="">
          </div>
       </div>
 
