--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="public/css/index.css">
-   <link rel="stylesheet" href="public/css/sidebar.css">
+   <link rel="stylesheet" href="statics/css/index.css">
+   <link rel="stylesheet" href="statics/css/sidebar.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
       integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -37,13 +37,13 @@
          </div>
          <div class="center">
             <a href="">HOME</a>
-          <a href="pages/about.html">ABOUT</a>
-          <a href="pages/skils.html">SKILS</a>
-          <a href="pages/contact.html">CONTACT</a>
+          <a href="about.html">ABOUT</a>
+          <a href="skils.html">SKILS</a>
+          <a href="contact.html">CONTACT</a>
          </div>
          <div class="right">
             <span>
-               <img src="public/img/user/FB.jpg" alt="user">
+               <img src="assets/FB.jpg" alt="user">
             </span>
             <div class="searchEngine" id="searchEngine">
                <input type="text" placeholder="...">
@@ -53,7 +53,7 @@
       </div>  
 
 <header class="header target">
-   <img src="/public/img/Background/abc.jpg" alt="Header görseli">
+   <img src="assets/abc.jpg" alt="Header görseli">
    <h1>My Blog</h1>
    <h3>It's a Dream</h3>
  </header>
@@ -63,7 +63,7 @@
       <div class="posts ">
          <div class="post target">
             <h1>Hakkimda</h1>
-            <img src="/pages/img1/Background/content-1.jpg " 
+            <img src="assets/content-1.jpg " 
             alt="content">
             <p>     
                Merhaba, ben Emir Eren Davet. Elektrik-Elektronik Mühendisliği 3. sınıf öğrencisiyim ve eğitimime Rize'de devam ediyorum. Yaz aylarını aktif şekilde değerlendirerek kendime yeni tecrübeler katmaya özen gösteriyorum. Daha önce gemi elektriği alanında staj yaparak saha tecrübesi edindim. Ardından, yazılım dünyasına adım atarak bu alanda da yeni bilgiler öğrenmeye ve kendimi geliştirmeye başladım. Her yeni deneyimi, hem teknik hem kişisel gelişimim için bir fırsat olarak görüyorum.            </p>
@@ -76,7 +76,7 @@
          </div>
          <div class="post target">
             <h1>Web Geliştirme Serüvenim</h1>
-            <img src="public/img/Background/content-1.jpg " 
+            <img src="assets/content-1.jpg " 
             alt="content">
                <p>     
                  Başlangıçta HTML ve CSS ile sadece tasarım yaparken, zamanla JavaScript ve React gibi teknolojileri kullanarak interaktif web uygulamaları geliştirmeye başladım. Kendi portföy sitemi oluşturmam bu sürecin dönüm noktasıydı.
@@ -92,7 +92,7 @@
       <div class="sidebar target">
          <div class="area target">
              <h3>Who I am</h3>
-             <img src="public/img/user/FB.jpg"
+             <img src="assets/FB.jpg"
               alt="user">
               <div class="categories">
                <span>#Engineer </span>
@@ -121,7 +121,7 @@
             Elektrik-Elektronik Mühendisliği alanında edindiğim teorik bilgileri, çeşitli saha tecrübeleriyle pekiştirdim. Özellikle gemi elektriği alanında sistem kurulumları ve arıza takibi konularında deneyim sahibiyim. Bunun yanı sıra otomasyon sistemleri ve pano imalatı üzerine çalıştım; bu süreçlerde kablolama, ekipman yerleşimi ve devreye alma gibi görevlerde aktif rol aldım. Bu deneyimler, hem teknik hem de pratik becerilerimi geliştirmemi sağladı.            </p>
       </div>
       <div class="photo">
-         <img src="../public/img/team/eem.png" alt="">
+         <img src="assets/eem.png" alt="">
       </div>
    </div>
 
@@ -232,8 +232,8 @@
 
 
 
-<script src="public/js/search.js"></script>
-<script src="public/js/scroll.js"></script>
+<script src="statics/js/search.js"></script>
+<script src="statics/js/scroll.js"></script>
 
 
 
