--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
              
          </div>
          <div class="center">
-            <a href="../">HOME</a>
+            <a href="">HOME</a>
             <a href="about.html">ABOUT</a>
             <a href="skils.html">SKILS</a>
             <a href="contact.html">CONTACT</a>
