--- a/skils.html
+++ b/skils.html
@@ -34,12 +34,14 @@
            </a>
            
        </div>
+
          <div class="center">
-          <a href="">HOME</a>
-        <a href="about.html">ABOUT</a>
-        <a href="skils.html">SKILS</a>
-        <a href="contact.html">CONTACT</a>
-       </div>
+            <a href="../">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a href="skils.html">SKILS</a>
+            <a href="contact.html">CONTACT</a>
+         </div>
+
          <div class="right">
             <span>
                <img src="assets/FB.jpg" alt="user">
