--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
              
          </div>
          <div class="center">
-            <a href="">HOME</a>
+            <a href="/index.html">HOME</a>
             <a href="about.html">ABOUT</a>
             <a href="skils.html">SKILS</a>
             <a href="contact.html">CONTACT</a>
